# ai-context-manager

./: .bandit  .gitignore  .safety-policy  CHANGELOG.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  PRODUCTION_SETUP.md  README.md  benchmark_performance.py  docker-compose.yml  env.example  init.sql  pyproject.toml  quick_start.py  setup_pypi.py  test_auto_fallback.py  test_ollama_connectivity.py  test_runner.py  test_vector_database.py
.github/: dependabot.yml
.github/workflows/: demo-deploy.yml  docker.yml  publish.yml  security.yml  test.yml
ai_context_manager/: simple_api.py  utils.py
ai_context_manager/store/: postgres_vector_memory.py  vector_memory.py
demo_apps/: Dockerfile  demo-config.toml  requirements.txt
demo_apps/research_assistant/: __init__.py  app.py
demo_apps/web_demo/: app.py
demo_apps/web_demo/templates/: index.html
examples/: bank_categorizer_example.py  quick_start.py  research_agent_example.py
tests/: test-config.toml  test_basic.py
