[project]
name = "ai-context-manager"
version = "0.2.0"
description = "Enterprise-grade context management system for AI agents with vector database support"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "AI Context Manager Team", email = "team@ai-context-manager.com" }
]
maintainers = [
    { name = "AI Context Manager Team", email = "team@ai-context-manager.com" }
]
keywords = [
    "ai", "context-management", "vector-database", "agents", "llm", "embeddings", 
    "postgresql", "pgvector", "chromadb", "semantic-search", "memory-management"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "openai",
    "requests",
    "jinja2",
    "tiktoken",
    "toml"
]

[project.optional-dependencies]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0"
]
postgres = [
    "psycopg2-binary>=2.9.0",
    "numpy>=1.21.0"
]
production = [
    "psycopg2-binary>=2.9.0",
    "numpy>=1.21.0",
    "sentence-transformers>=2.2.0"
]
cli = [
    "click>=8.0.0",
    "rich>=10.0.0"
]
performance = [
    "psutil>=5.8.0",
    "memory-profiler>=0.60.0"
]
all = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "psycopg2-binary>=2.9.0",
    "numpy>=1.21.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "psutil>=5.8.0"
]

[project.scripts]
ai-context = "ai_context_manager.cli:main"

[project.urls]
Homepage = "https://github.com/ai-context-manager/ai-context-manager"
Repository = "https://github.com/ai-context-manager/ai-context-manager"
Documentation = "https://docs.ai-context-manager.com"
Issues = "https://github.com/ai-context-manager/ai-context-manager/issues"
Changelog = "https://github.com/ai-context-manager/ai-context-manager/blob/main/CHANGELOG.md"
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
